--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 	],
 	"require" : {
 		"php" : ">=5.3.3",
+		"symfony/symfony" : ">=2.1",
 		"twig/twig" : ">=1.8,<2.0-dev",
 		"doctrine/common" : ">=2.1,<2.4.x-dev"
 	},
