add integer value
associate the select to an integer value instead of string value

--- a/Resources/config/doctrine/Value.orm.yml
+++ b/Resources/config/doctrine/Value.orm.yml
@@ -8,6 +8,7 @@ Talan\Bundle\DynamicFormBundle\Entity\Value:
         1: StringValue
         2: TextValue
         3: ArrayValue
+        4: IntegerValue
     id:
         id:
             type: integer
