set travis with phpunit

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
 		"twig/twig" : ">=1.8,<2.0-dev",
 		"doctrine/common" : ">=2.1,<2.4.x-dev"
 	},
+	"require-dev" : {
+		"symfony-cmf/testing" : "1.2.*"
+	},
 	"target-dir" : "Talan/Bundle/DynamicFormBundle",
 	"autoload" : {
 		"psr-0" : {
