--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,10 @@ env:
     - SYMFONY_VERSION=2.5.*
 
 before_script:
-
-    # Set the GitHub OAuth token to make use of the 6000 per hour rate limit
     - composer self-update
-    - composer require symfony/framework-bundle:${SYMFONY_VERSION}
-    - composer require symfony/templating:${SYMFONY_VERSION}
     - composer install --dev
+    
+script: phpunit --coverage-text    
 
 notifications:
   email: aymen.bouchakoua@talan.tn
