--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		"php" : ">=5.3.3",
 		"symfony/symfony" : ">=2.1",
 		"twig/twig" : ">=1.8,<2.0-dev",
-		"doctrine/common" : ">=2.1,<2.4.x-dev"
+		"doctrine/common" : ">=2.1,<2.4.x-dev",
+		"doctrine/doctrine-fixtures-bundle" : "dev-master"
 	},
 	"target-dir" : "Talan/Bundle/DynamicFormBundle",
 	"autoload" : {
