--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"symfony/symfony" : ">=2.1",
 		"twig/twig" : ">=1.8,<2.0-dev",
 		"doctrine/common" : ">=2.1,<2.4.x-dev",
-		"doctrine/doctrine-fixtures-bundle" : "dev-master"
+		"doctrine/doctrine-fixtures-bundle" : ">=2.1"
 	},
 	"target-dir" : "Talan/Bundle/DynamicFormBundle",
 	"autoload" : {
