add value provider feature

--- a/Resources/config/doctrine/ArrayValue.orm.yml
+++ b/Resources/config/doctrine/ArrayValue.orm.yml
@@ -1,6 +1,6 @@
 Talan\Bundle\DynamicFormBundle\Entity\ArrayValue:
     type: entity
-    table: array_value
+    table: talan_array_value
     fields:
         value:
             type: array
