--- a/Resources/config/doctrine/TextValue.orm.yml
+++ b/Resources/config/doctrine/TextValue.orm.yml
@@ -1,6 +1,6 @@
 Talan\Bundle\DynamicFormBundle\Entity\TextValue:
     type: entity
-    table: text_value
+    table: talan_text_value
     fields:
         value:
             type: text
