--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -4,13 +4,13 @@ talan_dynamic_form_bo:
 talan_dynamic_form_bo_remove:    
     path:     /bo/remove/{form}
     defaults: { _controller: "TalanDynamicFormBundle:BO:remove" }
+talan_dynamic_form_bo_ownerList:    
+    path:     /owners/{formId}
+    defaults: { _controller: "TalanDynamicFormBundle:BO:ownerList" }
     
 talan_dynamic_form_fo:
     path:     /fo/{form}   
     defaults: { _controller: "TalanDynamicFormBundle:FO:form"}    
 talan_dynamic_form_fields:
-    path:     /fields/{form}
-    defaults: { _controller: "TalanDynamicFormBundle:FO:getFields"}
-talan_dynamic_form_values:
-    path:     /fields/{form}
-    defaults: { _controller: "TalanDynamicFormBundle:FO:getValues"}    
+    path:     /fields/{form}/{valueOwner}
+    defaults: { _controller: "TalanDynamicFormBundle:FO:getFields", valueOwner: null}
